assets/css/main.css
:root {
  --bg-color: #ffffff;
  --text-color: #484848;
  --icon-color: #949494;
  --gray-accent-1: #636363;
  --gray-accent-2: #555555;
  --gray-accent-3: #eeeeee;
  --gray-accent-4: #e1e1e1;
  --heart-color: #FF0000;
  --heart-hover: #8B0000;
  --notice-color: #a0cefb;
  --warning-color: #d9c98d;
  --link-color: #2979bc;
  --visited-link-color: #8f5baa;
}

html {
  font-size: 62.5%;
  height: 100%;
  -webkit-text-size-adjust: 100%;
}

body {
  background-color: var(--bg-color);
  color: var(--text-color);
  font-size: 1.6rem;
  font-family: "Helvetica Neue", "Arial", sans-serif;
  margin: 0 auto;
  line-height: 1.5;
  min-height: 100%;
  overflow-y: scroll;
}

a {
  color: var(--link-color);
}

a:visited {
  color: var(--visited-link-color);
}

table {
  border-collapse: collapse;
  margin: 0 auto;
}

table td,
table th {
  border: 1.5px solid var(--gray-accent-1);
  text-align: center;
  padding: 10px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 1.125;
}

hr {
  background-color: var(--gray-accent-1);
  border: 0;
  height: 1.5px;
  margin: 2rem 0;
}

img {
  max-width: 100%;
  height: auto;
}

figure {
  margin: 1.6rem 0;
}

figure figcaption {
  font-size: 1.4rem;
  font-style: italic;
  text-align: center;
  margin-top: 0.6rem;
  padding: 0 1rem;
}

.content {
  max-width: 64rem;
  margin: auto;
  padding: 2rem;
}

.content code,
.content pre {
  font-family: "Monaco", monospace;
  background-color: var(--gray-accent-3);
}

.content code {
  font-size: 1.5rem;
  padding: 0 0.4rem;
}

.content pre {
  display: block;
  white-space: pre;
  margin: 2rem 0;
  padding: 2rem;
  overflow-x: auto;
  word-break: break-all;
  word-wrap: break-word;
  border: thin solid var(--gray-accent-4);
  border-radius: 3px;
}

.content pre code {
  padding: 0;
}

.link-nowrap-nodec {
  color: var(--text-color) !important;
  text-decoration: none;
  white-space: nowrap;
}

.link-nowrap-nodec:hover {
  text-decoration: underline;
}

.link-fave-heart {
  text-decoration: none;
  color: var(--heart-color) !important;
}

.link-fave-heart:hover {
  color: var(--heart-hover) !important;
}

.post-list {
  display: grid;
  row-gap: 0.5rem;
  margin-right: -3rem;
}

.post-list > .post-list-info {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-right: 0.5rem;
}

.post-list > .post-list-date {
  white-space: pre;
}

.post-list > .post-list-misc {
  text-align: center;
}

.post-header > .post-title {
  margin: 0 0 0.3rem 0;
  font-size: 3rem;
  line-height: 1.15;
}

.post-header > .post-meta {
  font-size: 1.5rem;
  color: var(--gray-accent-2);
}

.post-header > a.post-meta {
  color: var(--link-color);
}

.navbar {
  top: 0;
  z-index: 998;
  position: sticky;
  background-color: var(--bg-color);
  border-bottom: 1.5px solid var(--gray-accent-1);
}

.navbar-content {
  display: grid;
  grid-template-columns: 0.3fr 1.6fr 0.3fr;
  max-width: 64rem;
  margin: auto;
  z-index: 999;
  padding: 2.2rem 2rem 1.6rem 2rem;
}

.navbar-content .navbar-title {
  display: flex;
  align-items: center;
  font-size: 1.85rem;
  margin: 0;
  white-space: nowrap;
}

.navbar-content > .navbar-internal-links {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  list-style: none;
  text-transform: capitalize;
  margin: 0;
  padding: 0;
}

.navbar-content > .navbar-external-links {
  display: flex;
  align-items: center;
}

.navbar-external-links > .navbar-external-link {
  padding: 0.2rem 0 0 0.6rem;
}

.navbar-external-links > .navbar-external-link svg {
  fill: var(--icon-color);
  width: 1.4em;
  height: 1.4em;
}

.navbar-external-links > .navbar-external-link svg:hover {
  fill: var(--text-color);
}

blockquote,
.content pre,
.notice,
.warning {
  margin: 2rem 0;
  padding: 2rem;
  border: thin solid var(--gray-accent-1);
  background-color: var(--gray-accent-3);
  border-radius: 3px;
}

.content code {
  background-color: var(--gray-accent-3);
}

blockquote p,
.notice p,
.warning p {
  margin: 0;
}

.notice::before,
.warning::before {
  border-right: 2px solid var(--text-color);
  border-bottom: 2px solid var(--text-color);
  border-bottom-right-radius: 3px;
  display: block;
  text-align: center;
  position: relative;
  left: -2rem;
  top: -2rem;
  padding: 2px 10px;
  font-weight: bold;
}

.notice::before {
  content: "NOTE";
  background: var(--notice-color);
  width: 5rem;
}

.warning::before {
  content: "WARNING";
  background: var(--warning-color);
  width: 8rem;
}

#writing {
  grid-template-columns: 2fr 0.2fr 3rem;
}

#reading {
  grid-template-columns: 1.2fr 0.8fr 0.2fr 3rem;
}

#talks {
  grid-template-columns: 1.6125fr 0.2fr 0.1875fr 0.2fr 3rem;
}

/* support for Edge */
@supports (-ms-ime-align: auto) {
  .navbar-content > .navbar-internal-links {
    justify-content: space-around;
    margin: 0 1.4rem;
  }
}

/* adjustment when very small */
@media screen and (max-width: 50rem) {
  .post-list,
  .post-list > .post-list-info {
    margin-right: inherit;
  }

  .post-list > .post-list-misc {
    text-align: left;
    padding-bottom: 2rem;
  }

  .navbar {
    position: static;
  }

  .navbar-content {
    display: block;
    padding-bottom: 2.4rem;
  }

  .navbar-content > .navbar-internal-links {
    display: block;
    margin: 0.4rem 0 1.6rem 0;
    text-decoration: underline;
  }

  .navbar-content > .navbar-external-links {
    justify-content: flex-start;
    height: 2.7rem;
  }

  .navbar-content > .navbar-external-links svg {
    height: 1.6em;
    width: 1.6em;
  }

  .navbar-external-links > .navbar-external-link:first-of-type {
    padding: 0.2rem 0 0 0;
  }

  #writing,
  #reading,
  #talks {
    gap: 0;
    grid-template-columns: 1fr;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --bg-color: #000000;
    --text-color: #d7d7d7;
    --gray-accent-1: #636363;
    --gray-accent-2: #ababab;
    --gray-accent-3: #1b1b1b;
    --heart-hover: #FFA07A;
    --link-color: #6aa6d0;
    --visited-link-color: #b28ec6;
  }

  .notice::before,
  .warning::before {
    background: var(--bg-color);
    border-right: 1.5px solid var(--gray-accent-1);
    border-bottom: 1.5px solid var(--gray-accent-1);
  }

  .notice::before {
    color: var(--notice-color);
  }

  .warning::before {
    color: var(--warning-color);
  }
}

